--- a/app/scss/_jetzt.scss
+++ b/app/scss/_jetzt.scss
@@ -25,6 +25,7 @@
 
 .sr-reader {
   position: fixed;
+  z-index: 9999;
   top: -50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
